--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,11 +15,12 @@ dependencies:
 
   cupertino_icons: ^1.0.8
   google_maps_flutter: ^2.12.3
-  http:
   location: ^8.0.1
   geolocator: ^14.0.1
   geocoding: ^4.0.0
   dio: ^5.8.0+1
+  firebase_core: ^3.1.0
+  firebase_messaging: ^15.0.1
   shared_preferences: ^2.5.3
   flutter_localizations:
     sdk: flutter
@@ -27,9 +28,12 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   uuid: ^4.5.1
-
+  flutter_local_notifications: ^17.0.0
   provider: ^6.1.5
   flutter_polyline_points: ^2.1.0
+  flutter_timezone: ^4.1.1
+  timezone: ^0.9.4
+
 
 dev_dependencies:
   flutter_test:
